<resources>
    <string name="app_name">Test task</string>
    <string name="sign_in_failed_message">Sign in failed!</string>
    <string name="btn_sign_out_text">Выйти</string>
    <string name="mi_logout">Logout</string>
    <string name="mi_sort_by_alphabet">Sort by alphabet</string>
    <string name="server_client_id">237811025554-po0qdd2gob5v9vnm444p612nkunppf1k.apps.googleusercontent.com</string>
    <string name="mi_add">Add</string>
    <string name="lbl_activity_contacts">Contacts</string>
    <string name="mi_delete">Delete</string>
    <string name="confirm_dialog_title">Are you sure?</string>
    <string name="confirm_dialog_message">Delete this contacts?</string>
    <string name="confirm_dialog_positive_answer">Yes</string>
    <string name="confirm_dialog_negative_answer">No</string>
    <string name="dialog_first_name">First name</string>
    <string name="dialog_last_name">Last name</string>
    <string name="dialog_phone_number">Phone number</string>
    <string name="dialog_email">Email</string>
    <string name="dialog_enter_the_information_please">Enter the information, please</string>
    <string name="dialog_add_positive_answer">OK</string>
    <string name="dialog_add_neutral_answer">Cancel</string>
    <string name="mi_about">About</string>
    <string name="message_connection_failed">User connection failed!</string>
    <string name="main_greetings">Hello, this is simple test app, so a design also is very simple…)))</string>
    <string name="add_dialog_phone_not_valid">Phone number not valid!</string>
    <string name="add_dialog_email_not_valid">Email not valid!</string>
    <string name="about"> User\'s Google+ email using as a key for contacts list.\n
        You have able to add, delete, sort contacts and save contacts at local DB.\n
        Sorting by alphabet, phone code or substring.\n
        \n
        Used architecture pattern: MVP.\n
        DI: Dagger2.\n
        DB: SQLite.\n
        DAO: StorIOSqlite.\n
        Design: RecyclerView.
    </string>
    <string name="about_author">Author: Dmitriy Skopintsev</string>
    <string name="about_email">skopintsev2015@gmail.com</string>
    <string name="lbl_activity_about">About</string>
    <string name="mi_sort_by_substring">Sort by substring</string>
    <string name="mi_sort_by_phone_code">Sort by phone code</string>
    <string name="dialog_substring_please_type_a_substring">Please, type a substring</string>
    <string name="dialog_substring_hint">Substring</string>
    <string name="dialog_substring_please_type_a_phone_code">Please, type a phone code</string>
    <string name="dialog_phone_code_hint">Phone code</string>
    <string name="dialog_phone_code_not_valid">Phone code is not valid!</string>

</resources>
