<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_add"
        android:orderInCategory="1"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"
        android:title="@string/mi_add">
    </item>

    <item
        android:id="@+id/mi_delete"
        android:orderInCategory="2"
        android:icon="@drawable/ic_delete_enabled_mode"
        app:showAsAction="always"
        android:title="@string/mi_delete">
    </item>

    <item
        android:id="@+id/mi_sort_by_alphabet"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/mi_sort_by_alphabet">
    </item>

    <item
        android:id="@+id/mi_sort_by_substring"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        android:title="@string/mi_sort_by_substring">
    </item>

    <item
        android:id="@+id/mi_sort_by_phone_code"
        android:orderInCategory="5"
        app:showAsAction="ifRoom"
        android:title="@string/mi_sort_by_phone_code">
    </item>

    <item
        android:id="@+id/mi_logout"
        android:orderInCategory="6"
        app:showAsAction="ifRoom"
        android:title="@string/mi_logout">
    </item>

    <item
        android:id="@+id/mi_about"
        android:orderInCategory="7"
        app:showAsAction="ifRoom"
        android:title="@string/mi_about">
    </item>

</menu>