<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skopincev.testtask.AboutActivity"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    android:orientation="vertical">

    <!-- TODO: add info to tv-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="24sp"
        android:textColor="@color/yellow"
        android:textAlignment="viewStart"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_author"
        android:textSize="24sp"
        android:textColor="@color/yellow"
        android:textAlignment="gravity"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_above="@+id/tv_author_email"/>

    <TextView
        android:id="@+id/tv_author_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:autoLink="email"
        android:textSize="24sp"
        android:textAlignment="viewStart"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:paddingBottom="16dp"/>

</RelativeLayout>
